--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -8,7 +8,7 @@
     tools:context=".PlayActivity">
 
     <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/tv_play"
+        android:id="@+id/tv_player"
         android:layout_width="0dp"
         android:layout_height="45dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
         android:text="TextView"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_play" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_player" />
 
     <TextView
         android:id="@+id/tv_quality"
