--- a/app/src/main/res/layout/channel_row.xml
+++ b/app/src/main/res/layout/channel_row.xml
@@ -8,7 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="117dp">
 
         <ImageView
             android:id="@+id/channel_cover"
@@ -41,4 +41,5 @@
             app:layout_constraintTop_toBottomOf="@+id/channel_title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </com.google.android.material.card.MaterialCardView>
